tests/snapshots/integration_tests__branch_management_drift_warning.snap
---
source: tests/integration_tests.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] [WARN] Configuration drift detected for branch feature-A.
[gherrit] [WARN] The current git configuration does not match the expected state for an unmanaged branch.
[gherrit] [WARN]   - pushRemote: current='origin', expected='<unset>'
[gherrit] [WARN] Use --force to overwrite manual changes.
