tests/snapshots/integration_tests__branch_management_unmanage.snap
---
source: tests/integration_tests.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch feature-A is now unmanaged by GHerrit.
