tests/snapshots/integration_tests__commit_msg_detached.snap
---
source: tests/integration_tests.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
(empty)
