tests/snapshots/integration_tests__commit_msg_hook_manage.snap
---
source: tests/integration_tests.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch main is now managed by GHerrit in private mode.
[gherrit]   - 'git push' will sync PRs only, but will not push main itself.
