tests/snapshots/integration_tests__install_edge_cases_upgrade.snap
---
source: tests/integration_tests.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Installed pre-push
[gherrit] Installed commit-msg
[gherrit] Installed post-checkout
