tests/snapshots/integration_tests__install_security_custom_external_block.snap
---
source: tests/integration_tests.rs
expression: content
---
EXIT_CODE: 1

STDOUT:
(empty)

STDERR:
[gherrit] [ERROR] By default, GHerrit will not install to external/global hooks path: "[EXTERNAL_HOOKS_PATH]"
[gherrit] [ERROR] Use --allow-global to override.
